--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>Psychic Game!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <script src="main.js"></script>
+    <script type="text/javascript" src="javascript.js" ></script>
 </head>
 <body>
     
+    <h1>The Psychic Game</h1>
+
+    <p>Guess what letter I'm thinking of</p>
+
+    <p>Wins:</p>
+    <p>Loses:</p>
+    <p>Guesses Left:</p>
+    <p>Your guesses so far:</p>
 </body>
 </html>
