basic javascript attempted

--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Psychic Game!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <script type="text/javascript" src="javascript.js" ></script>
+    <script type="text/javascript" src="assets/javascript/game.js" ></script>
 </head>
 <body>
     
-    <h1>The Psychic Game</h1>
+        <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">The Psychic Game</h1>
+                  <p class="lead"><i>Guess what letter I'm thinking of</i></p>
+                </div>
+              </div>
 
-    <p>Guess what letter I'm thinking of</p>
 
-    <p>Wins:</p>
-    <p>Loses:</p>
-    <p>Guesses Left:</p>
-    <p>Your guesses so far:</p>
+
+
+    <p class="wins">Wins:</p>
+    <p class="loses">Loses:</p>
+    <p class="guesses-left">Guesses Left:</p>
+    <p class="guesses-so-far">Your guesses so far:</p>
 </body>
 </html>
