--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Psychic Game!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <script type="text/javascript" src="assets/javascript/game.js" ></script>
+    <script src="assets/javascript/game.js" ></script>
 </head>
 <body>
     
