now transitioned into hangman

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Psychic Game!</title>
+    <title>Horror Hangman Game!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <script src="assets/javascript/game.js" ></script>
@@ -15,8 +15,8 @@
     
         <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                  <h1 class="display-4">The Psychic Game</h1>
-                  <p class="lead"><i>Guess what letter I'm thinking of</i></p>
+                  <h1 class="display-4">HANGMAN</h1>
+                  <p class="lead"><i>Guess The Horror Movie!</i></p>
                 </div>
               </div>
 
