reset page added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
 
 
 
+<div class="container">
+    <header> 
+        <h1>Hangman Game</h1>
+        <h3>Horror Movies</h3>
+    </header>
+    <div class="underscore">_ _ _ _</div>
+    <div class="guesses-so-far"> Guesses So Far: </div>
+    <div class="guesses-left">  Number of Guesses Left: </div>
+    <div class="wins">Wins:</div>
+    <div class="loses">Loses:</div>
 
-    <p class="wins">Wins:</p>
-    <p class="loses">Loses:</p>
-    <p class="guesses-left">Guesses Left:</p>
-    <p class="guesses-so-far">Your guesses so far:</p>
+</div>
+
+
+
 </body>
 </html>
