--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 
  <link rel="stylesheet" href="assets/css/reset.css">
 
@@ -14,26 +12,25 @@
     <title>Horror Hangman Game!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <script src="assets/javascript/game.js" ></script>
 </head>
 
 <body>
-    
-        <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                  <h1 class="display-4">HANGMAN</h1>
-                  <p class="lead"><i>Guess The Horror Movie!</i></p>
-                </div>
-              </div>
+
+    <script type="text/javascript" src="assets/javascript/game.js" ></script>
 
 
 
 <div class="container">
     <header> 
+      <br>
+      <br>
         <h1>Hangman Game</h1>
         <br>
         <h3>Horror Movies</h3>
     </header>
+    <br>
+    <br>
+
     <div class="underscore">_ _ _ _</div>
     <div class="guesses-so-far"> Guesses So Far: </div>
     <div class="guesses-left">  Number of Guesses Left: </div>
@@ -41,7 +38,6 @@
     <div class="loses">Loses:</div>
 
 </div>
-
 
 
 </body>
