stillm trying to make my underscores match my word through dom

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <br>
     <br>
 
-    <div class="underscore">_ _ _ _</div>
+    <div class="underscore"></div>
     <div class="guesses-so-far"> Guesses So Far: </div>
     <div class="guesses-left">  Number of Guesses Left: </div>
     <div class="wins">Wins:</div>
