FINALLY HAVE THE CORRECT JS but still need to workout wins/loses and for letters to fill in rigth index of underscore

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
 <body>
 
-    <script type="text/javascript" src="assets/javascript/game.js" ></script>
-
 
 
 <div class="container">
@@ -31,14 +29,15 @@
     <br>
     <br>
 
-    <div class="underscore"></div>
-    <div class="guesses-so-far"> Guesses So Far: </div>
-    <div class="guesses-left">  Number of Guesses Left: </div>
-    <div class="wins">Wins:</div>
-    <div class="loses">Loses:</div>
+    <div class="underscore"><span id="underscore"></span></div>
+    <div class="guesses-so-far"> Guesses So Far:<span id="guesses-so-far"></span> </div>
+    <div class="guesses-left">  Number of Guesses Left:<span id="guesses-left"></span></div>
+    <div class="wins">Wins:<span id="wins">0</span></div>
+    <div class="loses">Loses:<span id="loses">0</span></div>
 
 </div>
 
+<script type="text/javascript" src="assets/javascript/game.js" ></script>
 
 </body>
 </html>
