got the freaking letters to appear! I had to refer back to examples

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 
-<body>
+<body background="icons.jpg">
 
 
 
@@ -22,9 +22,9 @@
     <header> 
       <br>
       <br>
-        <h1>Hangman Game</h1>
+        <h1><span id="h">Hangman Game</h1></span>
         <br>
-        <h3>Horror Movies</h3>
+        <h3><span id="hm">Horror Movies</span></h3>
     </header>
     <br>
     <br>
