all javascript fixed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <h1><span id="h">Hangman Game</h1></span>
         <br>
         <h3><span id="hm">Horror Movies</span></h3>
+        <br>
+        <h5><span id="start">PRESS ANY KEY TO START!</span></h5>
     </header>
     <br>
     <br>
